--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -13,6 +14,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 [compat]
 Accessors = "0.1.42"
 MLStyle = "0.4.17"
+MacroTools = "0.5.16"
 ModelingToolkit = "10.10.0"
 OrderedCollections = "1.8.1"
 Symbolics = "6.44.0"
