--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MTKButter"
 uuid = "ca26f490-bc68-4489-97cc-95a4c39097e5"
-authors = ["cstjean"]
 version = "0.1.0"
+authors = ["cstjean"]
 
 [deps]
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
@@ -18,6 +18,6 @@ MLStyle = "0.4.17"
 MacroTools = "0.5.16"
 ModelingToolkit = "10.10.0"
 OrderedCollections = "1.8.1"
-Symbolics = "6.44.0"
+Symbolics = "6.44.0, 7"
 URIs = "1.6.1"
 julia = "1.10"
